--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/static/index.css">
 </head>
 <body>
-    <p1>
+    <p>
         Hellosss
-    </p1>
+    </p>
+
+    <script src="/static/index.js"></script> 
 </body>
 </html>
