--- a/index.html
+++ b/index.html
@@ -7,9 +7,37 @@
     <link rel="stylesheet" type="text/css" href="/static/index.css">
 </head>
 <body>
-    <p>
-        Hellosss
-    </p>
+    <div class="container">
+        <div class="header">
+            .microtwitter
+        </div>
+        <div class="middle">
+            <div class="tweet-container">
+                <div class="tweet">
+                    asdasd
+                </div>
+        
+                <div class="tweet">
+                    asdasd
+                </div>
+                <div class="tweet">
+                    asdasd
+                </div>
+                <div class="tweet">
+                    asdasd
+                </div>
+            </div>
+            <div class="rightside">
+                <div>
+                    Hello
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            A very minimalistic site that can spread information.
+        </div>
+    </div>
 
     <script src="/static/index.js"></script> 
 </body>
