A lot of improvements

--- a/index.html
+++ b/index.html
@@ -12,24 +12,44 @@
             .microtwitter
         </div>
         <div class="middle">
-            <div class="tweet-container">
+            <div id="tweet-container" class="tweet-container">
                 <div class="tweet">
-                    asdasd
+                    <div class="tweetheader">
+                        <div>@antonioganea</div>
+                        <div class="date">17 apr</div>
+                    </div>
+                    <hr>
+                    So this is what i was saying regarding that..
                 </div>
         
                 <div class="tweet">
-                    asdasd
+                    <div class="tweetheader">
+                        <div>@somebody</div>
+                        <div class="date">16 apr</div>
+                    </div>
+                    <hr>
+                    Omg, I like this CSS layout so much!
                 </div>
+
                 <div class="tweet">
-                    asdasd
-                </div>
-                <div class="tweet">
-                    asdasd
+                    <div class="tweetheader">
+                        <div>@antonioganea</div>
+                        <div class="date">12 apr</div>
+                    </div>
+                    <hr>
+                    Creating a cool website
                 </div>
             </div>
             <div class="rightside">
-                <div>
-                    Hello
+                <div class="loginform">
+                    Login form
+                    <br>
+                    <input type="text" id="fname" name="firstname" placeholder="username">
+                    <br>
+                    <input type="password" id="fpass" name="firstname" placeholder="password">
+                    <br>
+                    <input type="submit" value="Login" onclick="return onLoginClick();">
+                    <input type="submit" value="Register" onclick="return onRegisterClick();">
                 </div>
             </div>
         </div>
