--- a/index.html
+++ b/index.html
@@ -12,32 +12,44 @@
             .microtwitter
         </div>
         <div class="middle">
-            <div id="tweet-container" class="tweet-container">
-                <div class="tweet">
-                    <div class="tweetheader">
-                        <div>@antonioganea</div>
-                        <div class="date">17 apr</div>
-                    </div>
-                    <hr>
-                    So this is what i was saying regarding that..
-                </div>
-        
-                <div class="tweet">
-                    <div class="tweetheader">
-                        <div>@somebody</div>
-                        <div class="date">16 apr</div>
-                    </div>
-                    <hr>
-                    Omg, I like this CSS layout so much!
-                </div>
+            <div class="leftside">
 
                 <div class="tweet">
                     <div class="tweetheader">
-                        <div>@antonioganea</div>
-                        <div class="date">12 apr</div>
+                        <div>Post something ✍️</div>
                     </div>
                     <hr>
-                    Creating a cool website
+                    <textarea id="tweetEditor"></textarea>
+                    <input type="submit" value="Post" onclick="return onPostClick();">
+                </div>
+
+                <div id="tweet-container" class="tweet-container">
+                    <div class="tweet">
+                        <div class="tweetheader">
+                            <div>@antonioganea</div>
+                            <div class="date">17 apr</div>
+                        </div>
+                        <hr>
+                        So this is what i was saying regarding that..
+                    </div>
+            
+                    <div class="tweet">
+                        <div class="tweetheader">
+                            <div>@somebody</div>
+                            <div class="date">16 apr</div>
+                        </div>
+                        <hr>
+                        Omg, I like this CSS layout so much!
+                    </div>
+
+                    <div class="tweet">
+                        <div class="tweetheader">
+                            <div>@antonioganea</div>
+                            <div class="date">12 apr</div>
+                        </div>
+                        <hr>
+                        Creating a cool website
+                    </div>
                 </div>
             </div>
             <div class="rightside">
