Hooked edit and delete to server

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="middle">
             <div class="leftside">
 
-                <div id="tweetWriterPanel" class="tweet">
+                <div id="tweetWriterPanel" class="tweet" style="display: none;">
                     <div class="tweetheader">
                         <div>Post something ✍️</div>
                     </div>
@@ -34,19 +34,7 @@
                 </div>
 
                 <div id="tweet-container" class="tweet-container">
-                    <div id="tweet-32" class="tweet">
-                        <div class="tweetheader">
-                            <div>@antonioganea</div>
-                            <div class="date">17 apr</div>
-                        </div>
-                        <hr>
-                        <article>So this is what i was saying regarding that..</article>
-                        <br>
-                        <div class="tweet-button-container">
-                            <input type="submit" value="Edit" onclick="return onEditClick(this,32);" style="margin-right: 5px;">
-                            <input type="submit" value="Delete" onclick="return onDeleteClick(this,32);">
-                        </div>
-                    </div>
+
                 </div>
             </div>
             <div class="rightside">
