--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <input type="submit" value="Cancel" onclick="return backToWriting();">
                 </div>
 
+                <div>
+                    <input type="submit" value="Get Latest" onclick="return getLatestTweets();" style="width:100%">
+                </div>
                 <div id="tweet-container" class="tweet-container">
 
                 </div>
