Use of semantic tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <header>
             .microtwitter
-        </div>
+        </header>
         <div class="middle">
             <div class="leftside">
 
@@ -40,7 +40,7 @@
 
                 </div>
             </div>
-            <div class="rightside">
+            <aside class="rightside">
                 <div id="loggedinparent" class="smallloggedin" style="display: none;">
                     <div id="loggedin"></div>
                     <input type="submit" value="Logout" onclick="return onLogoutClick();">
@@ -56,12 +56,12 @@
                     <input type="submit" value="Register" onclick="return onRegisterClick();">
                     <div id="loginformDisp"></div>
                 </div>
-            </div>
+            </aside>
         </div>
 
-        <div class="footer">
+        <footer>
             A very minimalistic site that can spread information.
-        </div>
+        </footer>
     </div>
 
     <script src="/static/index.js"></script> 
