Tweet title and a little bit of reformatting

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                         <div>Post something ✍️</div>
                     </div>
                     <hr>
+
+                    <input id="tweetEditorTitle" type="text" value="">
                     <textarea id="tweetEditor"></textarea>
 
                     <div class="emoji-container">
